package com.qa.ims.controller;

public interface ICrudControllerCalculate {

    Double calculateTotalPrice();

}
